--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "~5.2.3",
     "core-js": "^2.5.3",
     "jquery": "^3.3.1",
+    "json-server": "^0.12.2",
     "rxjs": "5.5.6",
     "zone.js": "^0.8.4"
   }
